2009-04-06  Nicolas François  <nicolas.francois@centraliens.net>

	* src/usermod.c: Re-indent.
	* src/usermod.c: Specifying a inactivity value < -1 is not valid.

2009-04-06  Nicolas François  <nicolas.francois@centraliens.net>

	* configure.in: Prepare the next 4.1.3 release.
	* po/*.po, man/po/*.po: Updated PO files.

2009-04-06  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/prototypes.h, libmisc/addgrps.c: restrict add_groups() to
	ifndef USE_PAM.
	* lib/prototypes.h: Remove the declaration of add_cons_grps(). The
	function does not exist.
	* libmisc/setugid.c libmisc/age.c (setup_uid_gid): is_console is
	never set ifndef USE_PAM. Change the prototype of setup_uid_gid()
	when USE_PAM is not defined. This permits to remove add_groups
	from PAM builds.  setup_uid_gid is already subject to
	HAVE_INITGROUPS.
	* libmisc/pwd2spwd.c (pwd_to_spwd): pwd_to_spwd() is not used in
	PAM builds.

2009-04-05  Nicolas François  <nicolas.francois@centraliens.net>

	* src/passwd.c: do_update_age is only used ifndef USE_PAM. Make it
	more explicit.

2009-04-05  Nicolas François  <nicolas.francois@centraliens.net>

	* src/useradd.c: Set errno to 0 before calling strtol.

2009-04-05  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/isexpired.c: If there are no shadow entry, there is no
	need to convert the password entry to a shadow entry. The password
	is valid.

2009-04-05  Nicolas François  <nicolas.francois@centraliens.net>

	* man/usermod.8.xml: Split some paragraphs into smaller units.

2009-04-05  Nicolas François  <nicolas.francois@centraliens.net>

	* man/shadow.5.xml: Rewrote to mention the meaning of special
	values.

2009-04-04  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/pwd2spwd.c, src/chpasswd.c, src/newusers.c,
	src/passwd.c, src/pwck.c, src/pwconv.c, src/useradd.c,
	src/usermod.c: On Jan 01, 1970, do not set the sp_lstchg field to
	0 (which means that the password shall be changed during the next